# TheTest

./: .gitignore  CMakeLists.txt  README.md
include/: assets.h  camera.h  constants.h  enemy.h  entity.h  game.h  game_math.h  lib_selector.h  main.h  platform.h  player.h
src/: assets.cpp  enemy.cpp  main.cpp
src/entity/: entity.cpp  player.cpp
src/game/: game.cpp
src/platform/: camera.cpp  game_math.cpp  platform.cpp
